2005-05-21  Kazuhiko  <kazuhiko@fdiary.net>
	* misc/plugin/attach/attach.rb (attach_download): use 'image_size'
	library and set 'Content-Disposition: inline' if an attached file
	is an image.
	* hiki/image_size.rb: add a new file made by Keisuke Minami.

	* misc/hikifarm/index.cgi: support symlinks.

2005-05-21  Kouhei Yanagita <sugi@dream.big.or.jp>
	* misc/hikifarm/{index.cgi,hikifarm.conf,template/*}: separate
	template files of Hikifarm.

2005-05-21  Kazuhiko  <kazuhiko@fdiary.net>
	* misc/hikifarm/index.cgi: support RSS output and add a link to a
	wiki without any page by Kouhei Sutou.

	* misc/hikifarm/index.cgi: define 'hikifarm_path' automatically.

2005-05-19  Kazuhiko  <kazuhiko@fdiary.net>
	* misc/hikifarm/index.cgi: support hiki.conf made by hiki 0.6.x.

2005-05-19  Kouhei Yanagita <sugi@dream.big.or.jp>
	* hiki.cgi: use CGI.escapeHTML.

2005-05-19  Kouhei Yanagita <sugi@dream.big.or.jp>
	* hiki.cgi: use text/html (not text/plain) to show error page
	when an exception is raised.

2005-05-17  Kazuhiko  <kazuhiko@fdiary.net>
	* misc/plugin/local_css.rb: remove. use 'append-css.rb' instead.

	* hiki/util.rb: change the class name from 'DocDiff' to 'Diff'.
	* hiki/config.rb: add a new constant 'HIKI_RELEASE_DATE'.

2005-05-12  Kazuhiko  <kazuhiko@fdiary.net>
	* misc/plugin/attach/attach.rb (attach_image_anchor): remove a
	needless tag (report by 7743).

	* style/rd+/rd2html.rb (RD2HTMLVisitor::apply_to_Verbatim):
	support tables if RTtool is available (by GOTOU Yuuzou).

	* style/default/parser.rb (Parser_default::inline_impl): support a
	block plugin (by Yazawa).

2005-05-11  Kazuhiko  <kazuhiko@fdiary.net>
	* misc/hikifarm/index.cgi: revise for mod_ruby. support a wiki
	without any page.

	* style/default/html_formatter.rb
	(HTMLFormatter_default::token_to_s): display page's title if
	available.

2005-05-10  Kazuhiko  <kazuhiko@fdiary.net>
	* hiki.cgi, misc/plugin/attach/attach.cgi: use absolute paths for
	load paths.
